--- a/VaskEnTid/VaskEnTidWeb/Pages/Index.cshtml
+++ b/VaskEnTid/VaskEnTidWeb/Pages/Index.cshtml
@@ -7,5 +7,15 @@
 <div class="text-center">
     <h1 class="display-4">Vasketid</h1>
     <h2 class="display-4">Please log-in</h2>
-
+    <form action="/action_page.php">
+        <div class="mb-3 mt-3">
+            <label for="email" class="form-label">Email:</label>
+            <input type="email" class="form-control" id="email" placeholder="Enter email" name="email">
+        </div>
+        <div class="mb-3">
+            <label for="pwd" class="form-label">Password:</label>
+            <input type="password" class="form-control" id="pwd" placeholder="Enter password" name="pswd">
+        </div>
+        <button type="submit" class="btn btn-primary">Submit</button>
+    </form>
 </div>
