--- a/VaskEnTid/VaskEnTidWeb/Pages/Index.cshtml
+++ b/VaskEnTid/VaskEnTidWeb/Pages/Index.cshtml
@@ -9,8 +9,8 @@
     <h2 class="display-4">Please log-in</h2>
     <form action="/action_page.php">
         <div class="mb-3 mt-3">
-            <label for="email" class="form-label">Email:</label>
-            <input type="email" class="form-control" id="email" placeholder="Enter email" name="email">
+            <label for="email" class="form-label">Username:</label>
+            <input type="email" class="form-control" id="Username" placeholder="Enter username" name="username">
         </div>
         <div class="mb-3">
             <label for="pwd" class="form-label">Password:</label>
