--- a/VaskEnTid/VaskEnTidWeb/Pages/Shared/_Layout.cshtml
+++ b/VaskEnTid/VaskEnTidWeb/Pages/Shared/_Layout.cshtml
@@ -28,6 +28,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/Booking">Booking</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Domiciles">Domiciles</a>
+                        </li>
                     </ul>
                 </div>
             </div>
