--- a/VaskEnTid/VaskEnTidWeb/Pages/Shared/_Layout.cshtml
+++ b/VaskEnTid/VaskEnTidWeb/Pages/Shared/_Layout.cshtml
@@ -26,7 +26,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-page="/Profile">Profile</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Booking">Booking</a>
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Bookings">Bookings</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/Domiciles">Domiciles</a>
