proper names in domiciles

--- a/VaskEnTid/VaskEnTidWeb/Pages/Domiciles.cshtml
+++ b/VaskEnTid/VaskEnTidWeb/Pages/Domiciles.cshtml
@@ -8,29 +8,29 @@
 @foreach (VaskEnTidLib.Model.Domicile domicile in Model.Domiciles)
 {
     <h1>
-        Booking Id: @domicile.DomicileID
+        Domicile Id: @domicile.DomicileID
     </h1>
 
     <p>
-        Domicile Id: @domicile.Roadname
+         Roadname: @domicile.Roadname
     </p>
     <p>
-        Domicile Id: @domicile.Region
+        Region: @domicile.Region
     </p>
     <p>
-        Domicile Id: @domicile.City
+        City: @domicile.City
     </p>
     <p>
-        Domicile Id: @domicile.Country
+        Country: @domicile.Country
     </p>
     <p>
-        Domicile Id: @domicile.Door
+        Door: @domicile.Door
     </p>
     <p>
-        Domicile Id: @domicile.Floor
+        Floor: @domicile.Floor
     </p>
     <p>
-        Domicile Id: @domicile.Postalcode
+        Postalcode: @domicile.Postalcode
     </p>
     <p>
         User Ids
