log-in side updateret

--- a/VaskEnTid/VaskEnTidWeb/Pages/Index.cshtml
+++ b/VaskEnTid/VaskEnTidWeb/Pages/Index.cshtml
@@ -1,26 +1,20 @@
 ﻿@page
 @model IndexModel
 @{
-    ViewData["Title"] = "Home page";
+	ViewData["Title"] = "Home page";
 }
 
 <div class="text-center">
-    <h1 class="display-4">Vasketid</h1>
-    <h2 class="display-4">Please log-in</h2>
-    <form method="post" asp-page-handler="LogIn">
-        <div class="mb-3 mt-3">
-            <label for="email" class="form-label">Username:</label>
-            <input type="number" asp-for="Userid" class="form-control" id="Username" placeholder="Enter username" name="username">
-        </div>
-        <div class="mb-3">
-            <label for="pwd" class="form-label">Password:</label>
-            <input type="password" class="form-control" asp-for ="Pass" id="pwd" placeholder="Enter password" name="pswd">
-        </div>
-        <input type="submit"/>
-    </form>
+	<h1 class="display-1">Vasketid</h1>
+	<form method="post" asp-page-handler="LogIn">
+		<div class="mb-3 mt-3">
+			<h3 class="display-6">Username</h3>
+			<input type="number" asp-for="Userid" class="form-label" />
+		</div>
+		<div class="mb-3 mt-3">
+			<h3 class="display-6">Password</h3>
+			<input type="password" asp-for="Pass" class="form-label" />
+		</div>
+		<input type="submit" />
+	</form>
 </div>
-<form method="post" asp-page-handler="LogIn">
-    <input type="number" asp-for="Userid" class="form-label" />
-    <input type="password" asp-for="Pass" class="form-label" />
-    <input type="submit"/>
-</form>
