ændret navn på submit til log-in

--- a/VaskEnTid/VaskEnTidWeb/Pages/Index.cshtml
+++ b/VaskEnTid/VaskEnTidWeb/Pages/Index.cshtml
@@ -15,6 +15,6 @@
 			<h3 class="display-6">Password</h3>
 			<input type="password" asp-for="Pass" class="form-label" />
 		</div>
-		<input type="submit" />
+		<input type="submit" value="Log-in" />
 	</form>
 </div>
