--- a/VaskEnTid/VaskEnTidWeb/Pages/Domiciles.cshtml
+++ b/VaskEnTid/VaskEnTidWeb/Pages/Domiciles.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model VaskEnTidWeb.Pages.DomicileModel
+@model VaskEnTidWeb.Pages.DomicilesModel
 @{
     ViewData["Title"] = "Domecile n shit";
 }
