--- a/VaskEnTid/VaskEnTidWeb/Pages/Booking.cshtml
+++ b/VaskEnTid/VaskEnTidWeb/Pages/Booking.cshtml
@@ -29,12 +29,9 @@
         <p>
             TotalCost: @Model.SpecificBooking.TotalCost
         </p>
-        @* <form method="post" asp-page-handler="Delete">
-            <input type="Hidden" name="TempTitle" asp-for="TempTitle" value="@Model.SpecificBlog.Title" />
-            <input type="submit" value="Delete Blog" />
-        </form> *@
         <div>
             <form method="post" asp-page-handler="Edit">
+                <input type="hidden" name="TempID" asp-for="TempID" value="@Model.SpecificBooking.BookingID" />
                 <input type="hidden" name="Edit" asp-for="Edit" value="true" />
                 <input type="submit" value="Edit" />
             </form>
@@ -43,5 +40,37 @@
 }
 else if (Model.Edit == true)
 {
+    <div class="card">
+        <form method="post" asp-page-handler="Save">
+
+            <h1>
+                Booking Id: @Model.SpecificBooking.BookingID
+            </h1>
+            <p>
+                Domicile Id: @Model.SpecificBooking.DomicileID
+            </p>
+            <p>
+                Machine Ids
+                @foreach (var i in Model.SpecificBooking.MachineIDs)
+                {
+                    <text>@i </text>
+                }
+            </p>
+            <p>
+                Booking Tidspunkt:@Model.SpecificBooking.DateAndTime <input type="text" name="TempDateAndTime" asp-for="TempDateAndTime" placeholder="@Model.SpecificBooking.DateAndTime" />
+            </p>
+            <p>
+                Duration: @Model.SpecificBooking.Duration
+            </p>
+            <p>
+                TotalCost: @Model.SpecificBooking.TotalCost
+            </p>
+            <p>
+                
+            </p>
+            <input type="hidden" name="TempID" asp-for="TempID" value="@Model.SpecificBooking.BookingID" />
+            <input type="submit" value="Save Blog" />
+        </form>
+    </div>
     
 }
