machineID fix in profile

--- a/VaskEnTid/VaskEnTidWeb/Pages/Profile.cshtml
+++ b/VaskEnTid/VaskEnTidWeb/Pages/Profile.cshtml
@@ -19,7 +19,7 @@
 			<tbody>
 				<tr>
 					<td>@Model.Bookings.DateAndTime</td>
-					<td>@Model.Bookings.MachineIDs</td>
+					<td>@Model.Bookings.MachineIDs[0]</td>
 					<td>remove button</td>
 				</tr>
 			</tbody>
