domicile edit works with private set

--- a/VaskEnTid/VaskEnTidWeb/Pages/Domicile.cshtml
+++ b/VaskEnTid/VaskEnTidWeb/Pages/Domicile.cshtml
@@ -33,6 +33,7 @@
         </form> *@
         <div>
             <form method="post" asp-page-handler="Edit">
+                <input type="hidden" name="TempID" asp-for="TempID" value="@Model.SpecificDomicile.DomicileID" />
                 <input type="hidden" name="Edit" asp-for="Edit" value="true" />
                 <input type="submit" value="Edit" />
             </form>
@@ -41,5 +42,35 @@
 }
 else if (Model.Edit == true)
 {
-    
+    <div class="card">
+        <form method="post" asp-page-handler="Save">
+            <h1>
+                Domicile Id: @Model.SpecificDomicile.DomicileID
+            </h1>
+
+            <p>
+                Adress: @Model.SpecificDomicile.Roadname @Model.SpecificDomicile.Door, @Model.SpecificDomicile.Floor. etage, @Model.SpecificDomicile.Postalcode @Model.SpecificDomicile.City, @Model.SpecificDomicile.Region, @Model.SpecificDomicile.Country
+                New RoadName: <input type="text" name="TempRoadName" asp-for="TempRoadName" Value="@Model.SpecificDomicile.Roadname" />
+                New Door: <input type="text" name="TempDoor" asp-for="TempDoor" Value="@Model.SpecificDomicile.Door" />
+                New Region: <input type="text" name="TempRegion" asp-for="TempRegion" Value="@Model.SpecificDomicile.Region" />
+                New City: <input type="text" name="TempCity" asp-for="TempCity" Value="@Model.SpecificDomicile.City" />
+                New Country:<input type="text" name="TempCountry" asp-for="TempCountry" Value="@Model.SpecificDomicile.Country" />
+            </p>
+            <p>
+                User Ids:
+                @foreach (var i in Model.SpecificDomicile.UserIDs)
+                {
+                    <text>@i  </text>
+                }
+            </p>
+
+            <p>
+                PriceTally: @Model.SpecificDomicile.PriceTally
+            </p>
+
+            <input type="hidden" name="TempID" asp-for="TempID" value="@Model.SpecificDomicile.DomicileID" />
+            <input type="submit" value="Save Changes" />
+        </form>
+    </div>
+
 }
