delete and add to map

--- a/VaskEnTid/VaskEnTidWeb/Pages/Domicile.cshtml
+++ b/VaskEnTid/VaskEnTidWeb/Pages/Domicile.cshtml
@@ -7,9 +7,6 @@
 {
     <div class="card">
         <h1>
-            Booking Id: @Model.SpecificDomicile.DomicileID
-        </h1>
-        <h1>
             Domicile Id: @Model.SpecificDomicile.DomicileID
         </h1>
 
@@ -67,7 +64,8 @@ else if (Model.Edit == true)
                 {
                     <text>@i.UserID  </text>
                 }
-                New User:<input type="text" name="TempUserID" asp-for="TempUserID" Value="@Model.SpecificDomicile.UserIDs[0]" />
+                New User:<input type="text" name="TempUserID" asp-for="TempUserID" />
+                Delete a user?:<input type="text" name="DeleteTempUserID" asp-for="DeleteTempUserID" />
             </p>
 
             <p>
