--- a/VaskEnTid/VaskEnTidWeb/Pages/Profile.cshtml
+++ b/VaskEnTid/VaskEnTidWeb/Pages/Profile.cshtml
@@ -39,7 +39,7 @@
 					<th>Fjern</th>
 				</tr>
 			</thead>
-@* 			@foreach (VaskEnTidLib.Model.User SpecificUser in @Model.Users) *@
+			@*@foreach (VaskEnTidLib.Model.User SpecificUser in @Model.Users) *@
 			@for (int i = 0; i < @Model.Users.Count; i++)
 			{
 				<tbody>
@@ -53,6 +53,19 @@
 				</tbody>
 			}
 		</table>
+		<h3>Lav Bruger</h3>
+		<form method="post" asp-page-handler="CreateUser">
+			<div class="mb-3 mt-3">
+				<input type="text" asp-for="CreateFirstName" class="form-label" value="Fornavn" />
+				<input type="text" asp-for="CreateLastName" class="form-label" value="Efternavn" />
+				<input type="text" asp-for="CreatePhone" class="form-label" value="Telefon nummer" />
+				<input type="text" asp-for="CreateEmail" class="form-label" value="Email" />
+				<input type="text" asp-for="CreatePassword" class="form-label" value="Password" />
+				<h6>Er det en administrator?</h6>
+				<input type="checkbox" asp-for="CreateAdmin" class="form-check" />
+				<input type="submit" value="CreateUser" />
+			</div>
+		</form>
 	</div>
 }
 
