Create User Men der er en out of bounds exceptions der skal kigges på

--- a/VaskEnTid/VaskEnTidWeb/Pages/Profile.cshtml
+++ b/VaskEnTid/VaskEnTidWeb/Pages/Profile.cshtml
@@ -59,6 +59,7 @@
 				<input type="text" asp-for="CreateFirstName" class="form-label" value="Fornavn" />
 				<input type="text" asp-for="CreateLastName" class="form-label" value="Efternavn" />
 				<input type="text" asp-for="CreatePhone" class="form-label" value="Telefon nummer" />
+				<input type="text" asp-for="CreateDomicileID" class="form-label" value="Hus ID" />
 				<input type="text" asp-for="CreateEmail" class="form-label" value="Email" />
 				<input type="text" asp-for="CreatePassword" class="form-label" value="Password" />
 				<h6>Er det en administrator?</h6>
