--- a/VaskEnTid/VaskEnTidWeb/Pages/Machines.cshtml
+++ b/VaskEnTid/VaskEnTidWeb/Pages/Machines.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model VaskEnTidWeb.Pages.MachineModel
+@model VaskEnTidWeb.Pages.MachinesModel
 @{
     ViewData["Title"] = "Machines n shit";
 }
